crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1920x1080.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 240.00965156191597,
        "l": 18.0,
        "phase": 0.0,
        "divisions": 5,
        "cents": 1200.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 208.9405373637324,
        "l": 58.987737414354925,
        "phase": 0.04244131815783876,
        "divisions": 5,
        "cents": 959.9999999999998
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 181.89330249739214,
        "l": 99.97547482870985,
        "phase": 0.08488263631567752,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          0,
          3
        ],
        "frequency": 158.34731694889703,
        "l": 140.9632122430648,
        "phase": 0.1273239544735163,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          0,
          4
        ],
        "frequency": 137.84934596629222,
        "l": 181.9509496574197,
        "phase": 0.16976527263135505,
        "divisions": 5,
        "cents": 240.00000000000014
      }
    ]
  },
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 320.1024964419735,
        "l": 242.8517578803681,
        "phase": 0.2122065907891938,
        "divisions": 5,
        "cents": 1200.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 278.6654085900556,
        "l": 283.839495294723,
        "phase": 0.2546479089470326,
        "divisions": 5,
        "cents": 959.9999999999999
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 242.59232841921752,
        "l": 324.8272327090779,
        "phase": 0.29708922710487135,
        "divisions": 5,
        "cents": 720.0000000000001
      },
      {
        "key": [
          1,
          3
        ],
        "frequency": 211.18888815666816,
        "l": 365.81497012343283,
        "phase": 0.3395305452627101,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          1,
          4
        ],
        "frequency": 183.8506055466696,
        "l": 406.80270753778774,
        "phase": 0.38197186342054884,
        "divisions": 5,
        "cents": 239.9999999999998
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          2,
          0
        ],
        "frequency": 380.9915733719064,
        "l": 467.70351576073614,
        "phase": 0.4244131815783876,
        "divisions": 5,
        "cents": 1200.0
      },
      {
        "key": [
          2,
          1
        ],
        "frequency": 331.6724288099897,
        "l": 508.69125317509105,
        "phase": 0.4668544997362264,
        "divisions": 5,
        "cents": 959.9999999999999
      },
      {
        "key": [
          2,
          2
        ],
        "frequency": 288.7376197303302,
        "l": 549.678990589446,
        "phase": 0.5092958178940652,
        "divisions": 5,
        "cents": 720.0000000000001
      },
      {
        "key": [
          2,
          3
        ],
        "frequency": 251.36069750102104,
        "l": 590.6667280038009,
        "phase": 0.5517371360519039,
        "divisions": 5,
        "cents": 480.0000000000002
      },
      {
        "key": [
          2,
          4
        ],
        "frequency": 218.82219680002052,
        "l": 631.6544654181558,
        "phase": 0.5941784542097427,
        "divisions": 5,
        "cents": 240.00000000000014
      }
    ]
  }
]
