crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1920x1080_In.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 149.37405564246507,
          "l": 259.85567919140647,
          "phase": 0.0,
          "divisions": 5,
          "cents": 378.93105489191163
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 164.94756195844656,
          "l": 300.8434166057614,
          "phase": 0.04244131815783876,
          "divisions": 5,
          "cents": 550.6244889875309
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 184.146376245057,
          "l": 341.8311540201163,
          "phase": 0.08488263631567752,
          "divisions": 5,
          "cents": 741.2391528225359
        },
        {
          "key": [
            0,
            3
          ],
          "frequency": 208.4031340941284,
          "l": 382.8188914344712,
          "phase": 0.1273239544735163,
          "divisions": 5,
          "cents": 955.46791287266
        },
        {
          "key": [
            0,
            4
          ],
          "frequency": 240.01984823368605,
          "l": 423.8066288488261,
          "phase": 0.16976527263135505,
          "divisions": 5,
          "cents": 1200.0
        }
      ]
    },
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 298.74811128493013,
          "l": 484.7074370717745,
          "phase": 0.2122065907891938,
          "divisions": 5,
          "cents": 378.93105489191163
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 329.8951239168931,
          "l": 525.6951744861294,
          "phase": 0.2546479089470326,
          "divisions": 5,
          "cents": 550.6244889875309
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 368.292752490114,
          "l": 566.6829119004843,
          "phase": 0.29708922710487135,
          "divisions": 5,
          "cents": 741.2391528225359
        },
        {
          "key": [
            1,
            3
          ],
          "frequency": 416.8062681882568,
          "l": 607.6706493148392,
          "phase": 0.3395305452627101,
          "divisions": 5,
          "cents": 955.46791287266
        },
        {
          "key": [
            1,
            4
          ],
          "frequency": 480.0396964673721,
          "l": 648.6583867291941,
          "phase": 0.38197186342054884,
          "divisions": 5,
          "cents": 1200.0
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            2,
            0
          ],
          "frequency": 597.4962225698603,
          "l": 709.5591949521425,
          "phase": 0.4244131815783876,
          "divisions": 5,
          "cents": 378.93105489191163
        },
        {
          "key": [
            2,
            1
          ],
          "frequency": 659.7902478337862,
          "l": 750.5469323664975,
          "phase": 0.4668544997362264,
          "divisions": 5,
          "cents": 550.6244889875309
        },
        {
          "key": [
            2,
            2
          ],
          "frequency": 736.585504980228,
          "l": 791.5346697808524,
          "phase": 0.5092958178940652,
          "divisions": 5,
          "cents": 741.2391528225359
        },
        {
          "key": [
            2,
            3
          ],
          "frequency": 833.6125363765136,
          "l": 832.5224071952073,
          "phase": 0.5517371360519039,
          "divisions": 5,
          "cents": 955.46791287266
        },
        {
          "key": [
            2,
            4
          ],
          "frequency": 960.0793929347442,
          "l": 873.5101446095622,
          "phase": 0.5941784542097427,
          "divisions": 5,
          "cents": 1200.0
        }
      ]
    }
  ],
  "In"
]
