crates/common/src/instrument/snapshots/common__instrument__config__tests__config_360x800.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 240.0954679142081,
        "l": 44.0,
        "phase": 0.0,
        "divisions": 3,
        "cents": 1200.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 190.56389916990548,
        "l": 81.99418564885205,
        "phase": 0.1061032953945969,
        "divisions": 3,
        "cents": 799.9999999999998
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 151.25066700473496,
        "l": 119.9883712977041,
        "phase": 0.2122065907891938,
        "divisions": 3,
        "cents": 400.0000000000003
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 480.1535742575729,
        "l": 177.18255694655613,
        "phase": 0.3183098861837907,
        "divisions": 3,
        "cents": 1200.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 381.0981444413811,
        "l": 215.1767425954082,
        "phase": 0.4244131815783876,
        "divisions": 3,
        "cents": 799.9999999999998
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 302.47779769468866,
        "l": 253.17092824426027,
        "phase": 0.5305164769729844,
        "divisions": 3,
        "cents": 400.0000000000003
      }
    ]
  }
]
