crates/common/src/instrument/snapshots/common__instrument__config__tests__config_390x844.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 120.11843146441213,
        "l": 24.0,
        "phase": 0.0,
        "divisions": 3,
        "cents": 0.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 151.3397402823675,
        "l": 65.24346621769641,
        "phase": 0.1061032953945969,
        "divisions": 3,
        "cents": 400.00000000000006
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 190.67612446737786,
        "l": 106.48693243539282,
        "phase": 0.2122065907891938,
        "divisions": 3,
        "cents": 799.9999999999998
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 240.03351491506896,
        "l": 166.9303986530892,
        "phase": 0.3183098861837907,
        "divisions": 3,
        "cents": 0.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 302.4232781217504,
        "l": 208.17386487078562,
        "phase": 0.4244131815783876,
        "divisions": 3,
        "cents": 400.00000000000006
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 381.0294540838049,
        "l": 249.41733108848203,
        "phase": 0.5305164769729844,
        "divisions": 3,
        "cents": 799.9999999999998
      }
    ]
  }
]
