crates/common/src/instrument/snapshots/common__instrument__config__tests__config_390x844_Yo.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 120.08102004345253,
          "l": 258.24676743429745,
          "phase": 0.0,
          "divisions": 3,
          "cents": 0.0
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 151.292604845594,
          "l": 299.4902336519939,
          "phase": 0.1061032953945969,
          "divisions": 3,
          "cents": 400.00000000000006
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 190.61673753839096,
          "l": 340.7336998696903,
          "phase": 0.2122065907891938,
          "divisions": 3,
          "cents": 799.9999999999998
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 240.16204008690505,
          "l": 401.17716608738675,
          "phase": 0.3183098861837907,
          "divisions": 3,
          "cents": 0.0
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 302.585209691188,
          "l": 442.42063230508313,
          "phase": 0.4244131815783876,
          "divisions": 3,
          "cents": 400.00000000000006
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 381.23347507678193,
          "l": 483.66409852277957,
          "phase": 0.5305164769729844,
          "divisions": 3,
          "cents": 799.9999999999998
        }
      ]
    }
  ],
  "Yo"
]
