crates/common/src/instrument/snapshots/common__instrument__config__tests__config_393x873.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 240.18075881997643,
        "l": 0.0,
        "phase": 0.0,
        "divisions": 3,
        "cents": 1200.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 190.6315946066755,
        "l": 44.469697623452475,
        "phase": 0.1061032953945969,
        "divisions": 3,
        "cents": 799.9999999999998
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 151.30439690850602,
        "l": 88.93939524690495,
        "phase": 0.2122065907891938,
        "divisions": 3,
        "cents": 400.00000000000006
      }
    ]
  },
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 508.7771005828912,
        "l": 153.67376520509526,
        "phase": 0.3183098861837907,
        "divisions": 3,
        "cents": 1200.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 403.81665234130594,
        "l": 198.14346282854774,
        "phase": 0.4244131815783876,
        "divisions": 3,
        "cents": 799.9999999999998
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 320.5094893644329,
        "l": 242.61316045200022,
        "phase": 0.5305164769729844,
        "divisions": 3,
        "cents": 400.00000000000006
      }
    ]
  }
]
