crates/common/src/instrument/snapshots/common__instrument__config__tests__config_412x915.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 120.09562388369264,
        "l": 44.0,
        "phase": 0.0,
        "divisions": 3,
        "cents": 0.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 151.31100453132183,
        "l": 86.63589565959877,
        "phase": 0.1061032953945969,
        "divisions": 3,
        "cents": 400.00000000000006
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 190.6399196897509,
        "l": 129.27179131919755,
        "phase": 0.2122065907891938,
        "divisions": 3,
        "cents": 799.9999999999998
      }
    ]
  },
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 179.87926531318962,
        "l": 191.33670272241096,
        "phase": 0.3183098861837907,
        "divisions": 3,
        "cents": 0.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 226.63367280771232,
        "l": 233.97259838200972,
        "phase": 0.4244131815783876,
        "divisions": 3,
        "cents": 400.00000000000006
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 285.540534985424,
        "l": 276.6084940416085,
        "phase": 0.5305164769729844,
        "divisions": 3,
        "cents": 799.9999999999998
      }
    ]
  }
]
