crates/common/src/instrument/snapshots/common__instrument__config__tests__config_412x915_Yo.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 120.00992411684302,
          "l": 285.14625412849176,
          "phase": 0.0,
          "divisions": 3,
          "cents": 0.0
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 151.20302959109694,
          "l": 327.7821497880905,
          "phase": 0.1061032953945969,
          "divisions": 3,
          "cents": 400.00000000000006
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 190.5038797897004,
          "l": 370.4180454476893,
          "phase": 0.2122065907891938,
          "divisions": 3,
          "cents": 799.9999999999998
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 240.01984823368605,
          "l": 432.48295685090267,
          "phase": 0.3183098861837907,
          "divisions": 3,
          "cents": 0.0
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 302.40605918219387,
          "l": 475.1188525105014,
          "phase": 0.4244131815783876,
          "divisions": 3,
          "cents": 400.00000000000006
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 381.0077595794008,
          "l": 517.7547481701002,
          "phase": 0.5305164769729844,
          "divisions": 3,
          "cents": 799.9999999999998
        }
      ]
    }
  ],
  "Yo"
]
