crates/common/src/instrument/snapshots/common__instrument__config__tests__config_414x896.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 240.24768397586124,
        "l": 24.0,
        "phase": 0.0,
        "divisions": 3,
        "cents": 1200.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 190.68471313810284,
        "l": 67.60373558496602,
        "phase": 0.1061032953945969,
        "divisions": 3,
        "cents": 800.0000000000001
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 151.3465571148394,
        "l": 111.20747116993203,
        "phase": 0.2122065907891938,
        "divisions": 3,
        "cents": 400.0000000000003
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 480.01930312383195,
        "l": 174.68126347716105,
        "phase": 0.3183098861837907,
        "divisions": 3,
        "cents": 1200.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 380.99157337190644,
        "l": 218.28499906212707,
        "phase": 0.4244131815783876,
        "divisions": 3,
        "cents": 800.0000000000001
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 302.39321218079186,
        "l": 261.8887346470931,
        "phase": 0.5305164769729844,
        "divisions": 3,
        "cents": 400.00000000000006
      }
    ]
  }
]
