crates/common/src/instrument/snapshots/common__instrument__config__tests__config_414x896_In.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 159.45217354481272,
          "l": 267.95298871815464,
          "phase": 0.0,
          "divisions": 3,
          "cents": 491.4810826274373
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 191.63268558692118,
          "l": 305.7886940500234,
          "phase": 0.16666666666666666,
          "divisions": 3,
          "cents": 809.7449505626737
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 240.086818057412,
          "l": 343.6243993818922,
          "phase": 0.3333333333333333,
          "divisions": 3,
          "cents": 1200.0
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 319.0003291094331,
          "l": 400.660104713761,
          "phase": 0.5,
          "divisions": 3,
          "cents": 491.4810826274373
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 383.3807242092692,
          "l": 438.49581004562975,
          "phase": 0.6666666666666666,
          "divisions": 3,
          "cents": 809.7449505626737
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 480.31815604963606,
          "l": 476.33151537749853,
          "phase": 0.8333333333333333,
          "divisions": 3,
          "cents": 1200.0
        }
      ]
    }
  ],
  "In"
]
